First succesful data pull & render

--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "raindrop-webportal",
   "description": "Create a customisable, lightweight and statically built webportal that's maintainable using your bookmarks.Create a customisable, lightweight and statically built webportal that's maintainable using your bookmarks",
   "author": "Denperidge",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "start": "eleventy --serve",
-    "build": "eleventy"
+    "build": "eleventy",
+    "data": "node .raindrop.js"
   },
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
     "@grimlink/eleventy-plugin-sass": "^1.0.3",
+    "dotenv": "^16.4.7",
     "eleventy-auto-cache-buster": "^0.8.1",
     "eleventy-favicons": "^1.0.3",
     "sass": "^1.85.1"
