WIP: Multiple raindrop collections

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 RAINDROP_URL="https://raindrop.io/username/collection-32639013"
+RAINDROP_SUBPAGES_URLS="subpage@https://raindrop.io/username/collection-32639013,other@https://raindrop.io/username/collection-32639013"
 RWP_TITLE="Raindrop.io Webportal"
 RWP_DESCRIPTION="A webportal generated from a Raindrop.io collection"
 RWP_BASE_URL="https://webportal.example.com/"
