.raindrop.js exit code 0 if CI

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Fetch data from Raindrop.io
         run: npm run data
         env:
+          CI: true
           RAINDROP_URLS: ${{ secrets.RAINDROP_URLS }}
       
       - name: Build
