Updated .env.example, og:url & canonical. Fixed CI

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 RAINDROP_SUBPAGES_URLS="index@https://raindrop.io/username/collection-32639013,subpage@https://raindrop.io/username/collection-32639013,other@https://raindrop.io/username/collection-32639013"
 RWP_TITLE="Raindrop.io Webportal"
 RWP_DESCRIPTION="A webportal generated from a Raindrop.io collection"
-RWP_BASE_URL="https://webportal.example.com/"
+RWP_BASE_URL="https://webportal.example.com"
