--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Fetch data from Raindrop.io
         run: npm run data
         env:
-          CI: true
+          CI: "true"
           RAINDROP_URLS: ${{ secrets.RAINDROP_URLS }}
       
       - name: Build
